<resources>
    <string name="app_name">MyGuests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos os convidados</string>
    <string name="menu_present">Presente(s)</string>
    <string name="menu_absent">Ausente(s)</string>

    <string name="name">Nome</string>
    <string name="presence">Presença</string>
    <string name="present">Presente</string>
    <string name="absent">Ausente</string>
    <string name="finalize">Finalizar</string>
</resources>